# prompt-notes

./: .envrc  .eslintrc.json  .gitignore  CLAUDE.md  README.md  README_ja.md  eslint.config.js  flake.nix  index.html  knip.json  package-lock.json  package.json  spec.md  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/commands/: readme.md
.claude/hooks/: install-codd-pre-commit.sh
.serena/: project.yml
.serena/memories/: codd_workflow.md  code_style_and_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
codd/: codd.yaml
docs/design/: system_design.md
docs/detailed_design/: component_architecture.md  editor_clipboard_design.md  feed_search_design.md  grid_search_design.md  storage_fileformat_design.md
docs/governance/: adr_tech_stack.md
docs/plan/: implementation_plan.md
docs/prompts/: integrate_tests.md
docs/requirements/: requirements.md
docs/test/: acceptance_criteria.md  e2e_strategy.md
knowledge/: codd-generate-behavior.md
scripts/: codd-assemble-wrapper.sh  codd-generate-wrapper.sh  codd-implement-diff-v17.sh  codd-implement-diff.sh
src/: App.svelte  app.css  app.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  notes.rs
src-tauri/src/commands/: clipboard.rs  config.rs  mod.rs  notes.rs
src-tauri/src/config/: mod.rs
src-tauri/src/storage/: file_manager.rs  frontmatter.rs  mod.rs  search.rs
src/editor/: frontmatter.ts  (+5 more)
tasks/: 001-vitest-runner-setup.md  002-vitest-scope-and-failing-tests.md  003-make-readme.md  004-delete-button-immediate.md  004-navigation-e2e-spec.md  006-remaining-e2e-failures-handoff.md  007-reconcile-component-paths.md  008-implement-card-max-height.md
tests/: tsconfig.json  wdio.conf.ts
(+114 files in other folders)
