[package]
name = "promptnotes"
version = "0.1.0"
description = "A local-first prompt note-taking app"
authors = ["dev-komenzar"]
edition = "2021"

[lib]
name = "promptnotes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
dirs = "5"
