[package]
name = "promptnotes"
version = "0.1.0"
edition = "2021"

[lib]
name = "promptnotes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "promptnotes"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
trash = "5"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
